# mcp-atlassian-attachments

./: AGENTS.md  CLAUDE.md  README.md  pyproject.toml  server.json
.github/workflows/: ci.yml
src/mcp_atlassian_attachments/: client.py  config.py  fs.py  jira.py  server.py
tests/: test_config.py  test_fs.py  test_jira.py
