[project]
name = "mcp-atlassian-attachments"
version = "0.1.1"
description = "MCP server for downloading Jira and Confluence Cloud attachments"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.6.0",
    "httpx>=0.27.0",
]

[project.scripts]
mcp-atlassian-attachments = "mcp_atlassian_attachments.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_atlassian_attachments"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "respx>=0.21.0",
    "ruff>=0.8.0",
    "pyright>=1.1.0",
    "pre-commit>=4.6.0",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
include = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
